apps/esphome/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: esphome

spec:
  selector:
    matchLabels:
      app: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: esphome
    spec:
      hostNetwork: true
      containers:
        - name: esphome
          image: esphome/esphome:stable
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6052
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - mountPath: /cache
              name: cache-volume
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-pvc
        - name: cache-volume
          persistentVolumeClaim:
            claimName: cache-pvc
